<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MercadoLibreChallenge</string>
    <string name="rating_average_between">Promedio entre %d opiniones</string>
    <string name="serch_query_hint">Buscar en Mercado Libre</string>
    <string name="product_detail_see_all_reviews">Ver todas las opiniones</string>
    <string name="product_detail_see_all_attributes">Ver más características</string>
    <string name="product_detail_main_features_title">Características principales</string>
    <string name="product_detail_free_shipping_title">Llega gratis a tu domicilio</string>
    <string name="full">FULL</string>
    <string name="product_detail_store_pickup">Retiralo gratis en el store del vendedor</string>
    <string name="guaranteed_shipping">Envío con normalidad</string>
    <string name="buy_label">Comprar</string>
    <string name="add_to_cart_label">Agregar al carrito</string>
    <string name="product_detail_description_title">Descripción</string>
    <string name="product_detail_features_title">Características principales</string>

    <string name="dictionary_free_shipping">Envío gratis</string>
    <string name="dictionary_guaranteed_shipping">Envío con normalidad</string>
    <string name="dictionary_sold_by">Vendido por</string>
    <string name="dictionary_full">FULL</string>
    <string name="dictionary_new_label">Nuevo</string>
    <string name="dictionary_used_label">Usado</string>
    <string name="dictionary_sold_label">vendidos</string>
    <string name="dictionary_average_between">Promedio entre</string>
    <string name="dictionary_reviews_label">opiniones</string>
    <string name="dictionary_reviews_about" tools:ignore="ExtraTranslation">Opiniones sobre</string>

    <string name="fragment_attributes_title">Información del producto</string>
    <string name="fragment_reviews_title">Opiniones</string>
    <string name="fragment_search_results_title">Resultados de búsqueda</string>
    <string name="fragment_product_detail_title">Producto</string>
    <string name="no_internet_error_title">¡Parece que no hay internet!</string>
    <string name="no_internet_error_subtitle">Revisa tu conexión para seguir navengando.</string>
    <string name="retry">Reintentar</string>
    <string name="section_not_implemented_title">¡Ups! Sección no implementada</string>
    <string name="section_not_implemented_subtitle">Prueba buscando algún producto</string>
    <string name="feature_not_implemented">Lo sentimos, esta función aún no está disponible</string>

</resources>
