<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintDimensionRatio="1:1"
            app:lottie_fileName="no_internet_animation.json"
            app:lottie_loop="true">
        </com.airbnb.lottie.LottieAnimationView>

        <TextView
            android:id="@+id/noInternetTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/animationView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/largeDimen"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:text="@string/no_internet_error_title">
        </TextView>

        <TextView
            android:id="@+id/noInternetSubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/noInternetTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/mediumDimen"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:textColor="@color/textLight"
            android:text="@string/no_internet_error_subtitle">
        </TextView>

        <TextView
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/noInternetSubtitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/xLargeDimen"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:focusable="true"
            android:text="@string/retry">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>