<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.marcelocuevas.mercadolibrechallenge.presentation.viewmodel.ItemViewModel">
        </variable>
    </data>

    <merge tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <TextView
            android:id="@+id/listPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/picturesSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/lato"
            android:textColor="@color/textLight"
            android:textSize="16sp"
            app:hideIfFalse="@{!viewModel.itemLiveData.originalPriceIsZero()}"
            android:text="@{viewModel.itemLiveData.originalPrice()}"
            android:background="@drawable/strikethrough_layer_list"
            tools:text="$ 28.728">
        </TextView>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/listPriceTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/lato"
            android:textSize="28sp"
            android:text="@{viewModel.itemLiveData.priceLabel()}"
            app:hideIfFalse="@{!viewModel.isLoadingLiveData().booleanValue()}"
            tools:text="$ 32.799">
        </TextView>

        <TextView
            android:id="@+id/shippingGuaranteedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/largeDimen"
            android:padding="@dimen/smallDimen"
            android:fontFamily="@font/lato"
            android:textSize="12sp"
            android:ellipsize="end"
            android:background="@drawable/rounded_background_accent"
            android:textColor="@android:color/white"
            app:hideIfFalse="@{viewModel.itemLiveData.hasShippingGuaranteed}"
            android:text="@{viewModel.itemLiveData.shippingGuaranteedLabel()}"
            tools:visibility="visible"
            tools:text="Envío con normalidad">
        </TextView>

        <TextView
            android:id="@+id/freeShippingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shippingGuaranteedTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/largeDimen"
            android:drawableStart="@drawable/ic_shipping"
            android:drawablePadding="@dimen/mediumDimen"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:textColor="@color/colorGreen"
            android:text="@string/product_detail_free_shipping_title"
            app:hideIfFalse="@{viewModel.itemLiveData.hasFreeShipping}"
            tools:visibility="visible">
        </TextView>

        <TextView
            android:id="@+id/fulfillmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/freeShippingTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/mediumDimen"
            android:drawableStart="@drawable/ic_flash_on"
            android:drawablePadding="@dimen/mediumDimen"
            android:fontFamily="@font/lato_bold_italic"
            android:textSize="16sp"
            android:textColor="@color/colorGreen"
            android:text="@string/full"
            app:hideIfFalse="@{viewModel.itemLiveData.hasFulfillment}"
            tools:visibility="visible">
        </TextView>

        <TextView
            android:id="@+id/storePickupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fulfillmentTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/mediumDimen"
            android:drawableStart="@drawable/ic_store"
            android:drawablePadding="@dimen/mediumDimen"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:textColor="@color/colorGreen"
            android:text="@string/product_detail_store_pickup"
            app:hideIfFalse="@{viewModel.itemLiveData.hasStorePickUp}">
        </TextView>

        <Button
            android:id="@+id/buyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/storePickupTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/xLargeDimen"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_background_accent"
            android:text="@string/buy_label"
            app:hideIfFalse="@{!viewModel.isLoadingLiveData().booleanValue()}"
            tools:visibility="visible"
            tools:text="Comprar ahora">
        </Button>

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/buyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/mediumDimen"
            android:fontFamily="@font/lato"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_background_transparent"
            android:text="@string/add_to_cart_label"
            app:hideIfFalse="@{!viewModel.isLoadingLiveData().booleanValue()}"
            tools:visibility="visible"
            tools:text="Agregar al carrito">
        </Button>

    </merge>
</layout>